# graffiti

./: .editorconfig  .gitignore  .gitmodules  .prettierrc  CONTRIBUTING.md  Gemfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Venenorosmd@msn.com  _config.yml  build.js  build.zig  compat.js  core.js  deno.json  graffiti.js  jsconfig.json  package-lock.json  package.json  submodules.sh  test.js  tsconfig.json
_old/: App.ts  AppWindow.ts  custom.d.ts  util.ts
docs/: blog.html  design-decisions.md  examples.md  getting-started.md  hot-reload.md  packaging.md  performance.md  proposedStyleApi.md  raspi.md  react.md  scope-of-the-project.md  status.md  tech-links.md  things-to-note.md  troubleshooting.md  vue.md  webrender.md
example/: example.ts  example.tsx  hello.ts  hello.tsx  init.ts  react-calculator.tsx  react-counter.tsx  react-flatlist.tsx  react-hello.tsx  react-input.tsx  react-scroll.tsx  react-wordwrap.tsx  tsconfig.json
examples/: _hmr.js  bounds.ts  calculator.html  calculator.js  counter.html  counter.js  css-in-js.html  css-in-js.js  example-browser.tsx  fetch.js  hacker-news.tsx  hello-preact-goober.js  hello-preact.js  hello-rect.html  hello.html  hello.js  hello.ts  htm.ts  input.html  layout.html  mithril-count.tsx  mithril.tsx  pokedex.html  preact.tsx  react-calc.tsx  react-count.tsx  react-hello.tsx  react-temperature.tsx  ref-test.js  svelte.js  vue2.html  wasm.html  webview.js  wpt.js
lib/: compat.js  core.js
libgraffiti/: Cargo.toml  build.rs  build.zig  cbindgen.toml  rustfmt.toml
libgraffiti/examples/: custom_window.rs  headless.rs  hello.c  hello.py  hello.rs  hello2.rs  hello_font.rs  hello_raqote.rs  hello_rect.rs  hello_webview.rs  hello_window.rs  html_macro.rs  tiny_skia.rs
libgraffiti/graffiti-glfw/: Cargo.toml  build.rs  lib.rs
libgraffiti/graffiti-stb/: Cargo.toml  build.rs  lib.rs  stb.c  stb_image.h  stb_truetype.h
libgraffiti/graffiti-yoga/: Cargo.toml  build.rs  lib.rs
libgraffiti/include/: graffiti.h
libgraffiti/resources/: font.json  sheet0.raw  ua.css
libgraffiti/src/: api.rs  app.rs  box_layout.rs  c.zig  commons.rs  convert.rs  css.rs  document.rs  document.zig  dom.rs  ffi.rs  generated.rs  gfx.rs  html.rs  interop.rs  layout.rs  layout.zig  lib.rs  lib.zig  macros.rs  main.zig  nodejs.rs  picker.rs  platform.rs  render.rs  renderer.rs  renderer.zig  renderer_old.rs  selector.rs  selectors.rs  style.rs  style.zig  text.rs  text_layout.rs  updater.rs  util.rs  viewport.rs  webview.rs  widget.zig  window.rs
libgraffiti/src/bindings/: api.rs  deno.rs  mod.rs  nodejs.rs
libgraffiti/src/box_layout/: mod.rs  stretch.rs  yoga.rs
libgraffiti/src/css/: CSSStyleDeclaration.zig  CSSStyleRule.zig  CSSStyleSheet.zig  Selector.zig  css_engine.rs  cssom.rs  matching.rs  mod.rs  parser.rs  parser.zig  parsing.rs  properties.rs  properties.zig  resolver.rs  rule.rs  rule.zig  selector.rs  sheet.rs  style.rs  style.zig  tokenize.rs  tokenizer.zig  value_types.rs  values.rs  values.zig
libgraffiti/src/css/values/: BoxShadow.zig  Color.zig  Dimension.zig  Px.zig  Transform.zig  box_shadow.rs  box_shadow.zig  color.rs  dimension.rs  enums.rs  enums.zig  mod.rs  px.rs  transform.rs
libgraffiti/src/document/: css.rs  html.rs  selectors.rs
libgraffiti/src/dom/: Comment.zig  DOMParser.zig  Document.zig  Element.zig  Node.zig  Text.zig  XMLSerializer.zig  document.zig  dom.zig  dom_tests.zig  html.zig
libgraffiti/src/gfx/: atlas.rs  canvas.rs  canvas.zig  font.rs  glyph_cache.rs  math.rs  mod.rs  text.rs
libgraffiti/src/gfx/backend/: gl.rs  mod.rs
libgraffiti/src/interop/: generated.rs  nodejs.rs
libgraffiti/src/layout/: block.rs  context.rs  flex.rs  flex.zig  layout.zig  layout_tree.rs  mod.rs  style.rs  style.zig  table.rs  test_util.rs  types.rs  yoga.rs
libgraffiti/src/platform/: glfw.rs  windows.rs
libgraffiti/src/render/: backend.rs  gl.rs  mod.rs  renderer.rs  value_types.rs
libgraffiti/src/render/backend/: gl.rs  raqote.rs
libgraffiti/src/render/backend/shaders/: rect.frag  rect.vert
libgraffiti/src/render/shaders/: rect.vert  text.frag  text.vert
libgraffiti/src/util/: atom.rs  bit_set.rs  bloom.rs  c_str.rs  clone_cell.rs  debug.rs  dylib.rs  id.rs  id_tree.rs  init.rs  lazy.rs  lookup.rs  mod.rs  profile.rs  slotmap.rs  tree.rs  versioned.rs
libgraffiti/src/windowing/: app.rs  events.rs  mod.rs  window.rs
native/: Cargo.toml  build.rs
native-new/: Cargo.toml  build.rs  test.ts
native-new/src/: api.rs  app.rs  commons.rs  ffi.rs  generated.rs  helpers.rs  layout.rs  lib.rs  macros.rs  picker.rs  render.rs  renderer.rs  scene.rs  storage.rs  temp.rs  text_layout.rs  window.rs
native-new/src/box_layout/: mod.rs  stretch.rs
native-new/src/layout/: mod.rs  stretch.rs  yoga.rs
native-new/src/render/: backend.rs  html.rs  mod.rs  webrender.rs
native-new/src/surface/: mod.rs
native-new/src/text/: mod.rs  pango.rs  simple.rs
native/src/: display_item.rs  images.rs  lib.rs  rendering.rs  resources.rs  surface.rs  window.rs
polyfills/: innerHTML.js
resources/: ua.css
src/: App.ts  AppWindow.ts  WebView.ts  adapter.ts  app.zig  cli.ts  css.zig  custom.d.ts  document.zig  dom_view.zig  hello.zig  hmr.ts  htmlparser.js  index.js  index.ts  layout.zig  lib.zig  main.zig  meta.zig  napi.zig  native.ts  nwsapi.ts  platform.zig  register.ts  render.zig  renderer.zig  style.zig  transpile.js  types.ts  util.ts  util.zig  uv_hook.zig  viewport.zig  (+4 more)
(+262 files in other folders)
