[package]
edition = "2018"
name = "graffiti"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
license = "MIT"

[lib]
name = "graffiti"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = "1.7.2"
fnv = "1.0.7"
pom = "3.2.0"
ab_glyph = "0.2.10"
fontdb = { git = "https://github.com/cztomsik/fontdb", rev = "f106359" }
rect_packer = "0.2.1"
graffiti-glfw = { path = "graffiti-glfw" }
graffiti-yoga = { path = "graffiti-yoga" }
crossbeam-channel = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
# panic = 'abort'
# lto = true
# fix --release for raspi https://github.com/rust-lang/rust/issues/62896
codegen-units = 1
