[package]
edition = "2021"
name = "graffiti"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
license = "MIT"

[lib]
name = "graffiti"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = "1.7.2"
fnv = "1.0.7"
pom = "3.2.0"
skia-safe = { version = "0.50.0", features = ["gl", "textlayout"] }
graffiti-glfw = { path = "graffiti-glfw" }
crossbeam-channel = "0.5.0"
smallbitvec = "2.5.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.39"

[profile.release]
# panic = 'abort'
# lto = true
# fix --release for raspi https://github.com/rust-lang/rust/issues/62896
codegen-units = 1

[features]
default = ["windowing", "ffi"]
ffi = []
windowing = []
profile = []
