[package]
edition = "2018"
name = "node-webrender"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
license = "MIT"

[lib]
name = "node_webrender"
crate-type = ["cdylib"]

[dependencies]
gl = "*"
new-hope = { path = "../../new-hope" }
libc = "0.2.48"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.38"
bincode = "1.1.1"
stretch = { git = "https://github.com/vislyhq/stretch", rev = "a7e2c07" }
glfw = "0.27.0"
font-kit = "0.3.1"
