[package]
edition = "2018"
name = "graffiti"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
license = "MIT"

[lib]
name = "graffiti"
crate-type = ["cdylib"]

[dependencies]
gl = "*"
libc = "0.2.48"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.38"
bincode = "1.1.1"
stretch = { path = "../../stretch" }
glfw = "0.27.0"
font-kit = "0.3.1"
