[package]
name = "node-webrender"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_webrender"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
webrender = { path = "../webrender/webrender" }
glutin = "0.18.0"
gleam = "0.6.4"
font-loader = "0.7.0"
app_units = "0.7"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.32"
euclid = "0.19.2"
log = "0.4.6"
