[package]
edition = "2018"
name = "node-webrender"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_webrender"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
webrender = { git = "https://github.com/servo/webrender.git", rev = "477d395" }
glutin = "0.18.0"
gleam = "0.6.8"
font-loader = "0.7.0"
app_units = "0.7"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
euclid = "0.19.4"
log = "0.4.6"
env_logger = "0.6.0"
yoga = { path = "../../yoga-rs", features = ["serde_support"] }
napi-rs = { path = "../../napi-rs" }
